styles: fix issue with variable $letter-spacing-xl

--- a/styles/components/_review.scss
+++ b/styles/components/_review.scss
@@ -11,7 +11,7 @@
         font-size: $font-size-11-2;
         font-weight: $font-medium;
         line-height: 2.625rem;
-        letter-spacing: $letter-spacing-xl;
+        letter-spacing: calc($font-size-6-2 * ($letter-spacing-xl / $font-size-10));
 
         &--highlight {
             color: $yellow-500;
