--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -33,7 +33,7 @@ $font-medium: 500;
 // Letter Spacing
 $letter-spacing-md: -2px;
 $letter-spacing-lg: -3px;
-$letter-spacing-xl: -4%;
+$letter-spacing-xl: 0.04em;
 $letter-spacing-xxl: -0.06em;
 
 // Spacing
